--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Website</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a basic HTML file with only the Google verification meta tag.</p>
+    <h1>Hello World</h1>
+    <p>Welcome to My Website. This is a basic HTML file with the Google verification meta tag.</p>
 </body>
 </html>
