--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="google-site-verification" content="RHJpTUBy5iixq_-58k7UuwQvrlp1AsrATdVUu7_rcjs" />
+    <meta name="google-site-verification" content="RVCIJ5wImz7sQtN_6tOduUvSo000uhu05oEAbvkti_1A" />
     <title>My Website</title>
 </head>
 <body>
     <h1>Hello World</h1>
     <p>Welcome to My Website. This is a basic HTML file with the Google verification meta tag.</p>
+    <p>Visit the <a href="https://github.com/Vijay69hindiefu1lonlnie2024" target="_blank">Vijay 69</a> project on GitHub for more information.</p>
 </body>
 </html>
