--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Hello World</h1>
     <p>Welcome to My Website. This is a basic HTML file with the Google verification meta tag.</p>
-    <p>Visit the <a href="https://github.com/Vijay69hindiefu1lonlnie2024" target="_blank">Vijay 69</a> project on GitHub for more information.</p>
+    <p>Visit the <a href="https://github.com/Kanguva-full-muvee-dwnld-hindee" target="_blank">Kanguva</a> project on GitHub for more information.</p>
 </body>
 </html>
